
[metadata]
name                          = pybmix
version                       = 0.0.1
license                       = BSD 3-Clause
license_files                 = LICENSE
author                        = Mario Beraha
author_email                  = berahamario@gmail.com
description                   = pybmix: a Python interface to bayesmix.
keywords                      = mixture models, bayesian, nonparametrics, clustering, density
long_description              = file: README.md
long_description_content_type = text/markdown
url                           = https://github.com/bayesmix-dev/pybmix
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6

[options.packages.find]
exclude =
    tests, docs, images